--- a/assets/style/css/report.css
+++ b/assets/style/css/report.css
@@ -20,7 +20,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 25px;
         }
 
         div>div {
@@ -77,6 +76,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            padding: 30px;
         }
 
         p {
@@ -91,10 +91,11 @@
             font-size: 40px;
             color: #ffff;
             font-family: "Catamaran", sans-serif;
+            margin: 0;
         }
         @media only screen and (min-width: 1000px){
             .header-brand{
-                font-size: 50px;
+                font-size: 100px;
             }
         }
 
