--- a/ch/css/404.css
+++ b/ch/css/404.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(https://saro.website/img/embl/404.jpg);
+    background-image: url(https://saro.website/assets/img/embl/404.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
