--- a/assets/style/css/report.css
+++ b/assets/style/css/report.css
@@ -20,6 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-top: 25px;
         }
 
         div>div {
@@ -76,7 +77,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 30px;
         }
 
         p {
@@ -91,11 +91,10 @@
             font-size: 40px;
             color: #ffff;
             font-family: "Catamaran", sans-serif;
-            margin: 0;
         }
         @media only screen and (min-width: 1000px){
             .header-brand{
-                font-size: 100px;
+                font-size: 50px;
             }
         }
 
