--- a/assets/style/base/_base.scss
+++ b/assets/style/base/_base.scss
@@ -183,6 +183,7 @@ html:lang(ja){
     font-family: $jp__family;
     font-size: 12px;
     font-weight: 300;
+    font-style: normal;
   }
   ruby{
     font-family: $font-family__primary;
