--- a/assets/style/components/_main.scss
+++ b/assets/style/components/_main.scss
@@ -102,6 +102,27 @@ html:lang(ja){
   padding: 0 10px;
 }
 
+.content{
+    &--trad {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+    &--dial {
+    display: flex;
+    flex-direction: row;
+    }
+  }
+
+  .content--dial--item{
+    width: 50%;  }
+
+
+.container__trad--item {
+    line-height: 25px;
+}
+
+
 //tools
 .tools-name__checker {
   display: flex;
