--- a/assets/style/base/_list-styles.scss
+++ b/assets/style/base/_list-styles.scss
@@ -16,3 +16,9 @@
     color: #111;
     margin: 0 20px;
   }
+
+.noun-gender {
+  list-style: decimal;
+  font-family: "Catamaran";
+  margin: 10px;
+}
