--- a/assets/style/base/_tables.scss
+++ b/assets/style/base/_tables.scss
@@ -22,6 +22,13 @@ td {
 
 .panel {
   table{
-    margin: 15px 0 15px 0;
+    margin: 20px 0 20px 0;
+    border: 3px solid #1E1149;
+    border-radius: 5px;
+    th,
+    td{
+      border: 3px solid #1E1149;
+      text-align: center;
+    }
   }
 }
