--- a/assets/style/components/_cards.scss
+++ b/assets/style/components/_cards.scss
@@ -13,6 +13,8 @@
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: 8px;
+    min-height: 100%;
+    overflow: hidden;
   }
 
   .container__card {
