--- a/assets/style/base/_elements__place.scss
+++ b/assets/style/base/_elements__place.scss
@@ -22,11 +22,9 @@
   color: #B2179D;
 }
 
-#after_submit{
-  visibility:hidden;
+#afterSubmit{
   padding:10px;
   width:100%;
-  font-size:30px;
 }
 
 // idioms lesson
