--- a/assets/style/components/_app.scss
+++ b/assets/style/components/_app.scss
@@ -356,7 +356,7 @@
   z-index: 255;
   & > a {
     font-family: $font-family__primary;
-    color:  #e84118!important;
+    color: #e84118 !important;
     font-weight: bold;
     transition: color 0.5s ease;
     &:hover {
@@ -403,7 +403,7 @@ html:lang(ja) {
     transition: all 400ms ease;
     z-index: 255;
     & > a {
-      color: #e84118!important;
+      color: #e84118 !important;
       font-weight: bold;
       transition: color 0.5s ease;
       &:hover {
@@ -451,7 +451,7 @@ html:lang(zh) {
     transition: all 400ms ease;
     z-index: 255;
     & > a {
-      color: #e84118!important;
+      color: #e84118 !important;
       font-weight: bold;
       transition: color 0.5s ease;
       &:hover {
@@ -488,13 +488,92 @@ html:lang(zh) {
   width: 15px;
   height: 15px;
   cursor: pointer;
-  transition: transform .5s ease, opacity .8s ease-in;
+  transition: transform 0.5s ease, opacity 0.8s ease-in;
   &:hover {
     transform: scale(1.3);
-    opacity: .5;
+    opacity: 0.5;
   }
 }
 
 .audio {
   display: none;
+}
+
+.api__name {
+  margin-top: 70px !important;
+  .nameChecker {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
+  .nameChecker__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  .names__item {
+    padding: 0 15px 30px 15px;
+    width: 250px;
+  }
+  #root {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    height: 65vh;
+    overflow-y: scroll;
+    justify-content: center;
+  }
+  .logo {
+    color: red;
+    font-size: 35px;
+    font-weight: 900;
+    text-decoration: underline;
+    font-family: "Pacifico";
+  }
+  h2 {
+    color: black;
+    font-size: 35px;
+    font-weight: 900;
+    font-family: "Poiret One";
+  }
+  input {
+    margin-bottom: 10px;
+  }
+  i {
+    text-align: center;
+  }
+  .result {
+    font-size: 15px;
+    color: red;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  button {
+    border-radius: 50px;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: #fff;
+    transition: background-color 0.5s ease-in, color 0.3s ease;
+    font-weight: 600;
+  }
+  button:hover {
+    background-color: #fff;
+    color: red;
+    border: 2px solid red;
+  }
+  b {
+    font-weight: bold;
+    color: red;
+  }
+  a {
+    text-decoration: underline;
+    color: red;
+  }
 }
