--- a/assets/style/components/_main.scss
+++ b/assets/style/components/_main.scss
@@ -158,19 +158,22 @@ html:lang(ja) {
 }
 
 //Quiz page
-.container.quiz {
+.container.quiz,
+.container.tools {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
 }
-.quiz__box--item {
+.quiz__box--item,
+.tools__box {
   flex-basis: 50%;
   padding: 0 15px 30px 15px;
 }
 
 @media screen and (min-width: 700px) {
-  .quiz img {
+  .quiz img,
+  .tools img {
     float: unset;
   }
 }
