--- a/assets/style/base/_buttons.scss
+++ b/assets/style/base/_buttons.scss
@@ -19,6 +19,12 @@
   content: "⇦";
 }
 
+section.quiz {
+  .back {
+    top: 0;
+  }
+}
+
 @media only screen and (min-width: 1000px) {
   .back {
     color: $color__basic;
