--- a/assets/style/components/_panels.scss
+++ b/assets/style/components/_panels.scss
@@ -29,6 +29,9 @@
   .lesson--polish-idioms {
     background-image: url(./../../img/embl/polishIdioms.jpg);
   }
+  .lesson--testUnit0 {
+    background-image: url(./../../img/embl/testUnit0.jpg);
+  }
 }
 
 //dialgues
