--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -1042,6 +1042,10 @@ html:lang(zh) * {
   content: "⇦";
 }
 
+section.quiz .back {
+  top: 0;
+}
+
 @media only screen and (min-width: 1000px) {
   .back {
     color: #ffff;
@@ -3172,6 +3176,10 @@ form#quiz input#submitButton:hover, form#quiz input#submitButton:focus {
   background-image: url(./../../img/embl/polishIdioms.jpg);
 }
 
+.lesson .lesson--testUnit0 {
+  background-image: url(./../../img/embl/testUnit0.jpg);
+}
+
 .dialogue .dialogue {
   background-color: none;
   color: #fff;
@@ -5172,34 +5180,18 @@ html:lang(ja) .report {
   margin-bottom: 15px;
 }
 
-.quiz {
-  max-width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
+#container,
 .container__quiz {
+  font-family: "Catamaran", fallback, sans-serif;
+  max-width: 500px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-.box__quiz--item {
-  flex-basis: 80%;
-}
-
-#box__quiz {
-  margin: 20px auto;
-  background-color: white;
-  height: 500px;
-  width: 100%;
-  border-radius: 5px;
-  box-shadow: 0px 5px 15px 0px;
-  position: relative;
-  flex-direction: column;
-}
-
-#start {
+#container #start,
+.container__quiz #start {
   font-size: 1.5em;
   font-weight: bolder;
   word-break: break-all;
@@ -5208,62 +5200,38 @@ html:lang(ja) .report {
   border: 2px solid lightgrey;
   text-align: center;
   cursor: pointer;
-  position: absolute;
-  left: 100px;
-  top: 150px;
   color: lightgrey;
   justify-content: center;
   align-items: center;
   display: flex;
 }
 
-#start:hover {
+#container #start:hover,
+.container__quiz #start:hover {
   border: 3px solid pink;
   color: pink;
 }
 
-#qImg {
+#container #questions,
+.container__quiz #questions {
+  padding: 0 20px;
+}
+
+#container #qImg,
+.container__quiz #qImg {
   max-width: 200px;
-  position: relative;
-  left: 0px;
-  top: 0px;
-  margin: 0 auto;
 }
 
-#qImg img {
-  max-width: 200px;
-  height: 200px;
-  border-top-left-radius: 5px;
-  margin: 0 auto;
-}
-
-#question {
-  width: 100%;
-  position: absolute;
-  right: 0;
-  top: 200px;
-  display: flex;
-  justify-content: center;
-}
-
-#question p {
-  margin: 0;
-  padding: 15px;
-  font-size: 1.25em;
-}
-
-#choices {
-  width: 100%;
-  position: absolute;
-  right: 0;
-  top: 250px;
-  padding: 20px;
+#container #choices,
+.container__quiz #choices {
+  max-width: 100%;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
 }
 
-.choice {
-  font-family: "Catamaran", fallback, sans-serif;
+#container .choice,
+.container__quiz .choice {
   display: inline-block;
   text-align: center;
   border: 1px solid grey;
@@ -5273,51 +5241,58 @@ html:lang(ja) .report {
   width: 100%;
   font-size: 20px;
   font-weight: 600;
+  margin: 15px 0;
 }
 
-.choice:hover {
+#container .choice:hover,
+.container__quiz .choice:hover {
   border: 2px solid grey;
   font-weight: bold;
 }
 
-#timer {
-  position: absolute;
+#container #timer,
+.container__quiz #timer {
   height: 100px;
-  width: 200px;
-  bottom: 0px;
+  max-width: 200px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
-#counter {
+#container #counter,
+.container__quiz #counter {
   font-size: 3em;
 }
 
-#btimeGauge {
-  width: 150px;
-  height: 10px;
+#container #btimeGauge,
+.container__quiz #btimeGauge {
+  max-width: 150px;
+  max-height: 10px;
   border-radius: 10px;
   background-color: lightgray;
   margin-left: 25px;
 }
 
-#timeGauge {
+#container #timeGauge,
+.container__quiz #timeGauge {
   height: 10px;
   border-radius: 10px;
   background-color: pink;
   margin-top: -10px;
   margin-left: 25px;
+  margin-bottom: 25px;
 }
 
-#progress {
-  width: 500px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  padding: 5px;
+#container #progress,
+.container__quiz #progress {
+  max-width: 500px;
   text-align: right;
 }
 
-.prog {
+#container .prog,
+.container__quiz .prog {
   width: 25px;
   height: 25px;
   border: 1px solid #000;
@@ -5327,186 +5302,42 @@ html:lang(ja) .report {
   margin-right: 5px;
 }
 
-#scoreContainer {
-  margin: 20px auto;
+#container #scoreContainer,
+.container__quiz #scoreContainer {
   background-color: white;
   opacity: 0.8;
   height: 300px;
-  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
   border-radius: 5px;
   box-shadow: 0px 5px 15px 0px;
-  position: relative;
   display: none;
+  position: absolute;
+  top: 25%;
+  left: 0;
+  right: 0;
+  bottom: 25%;
 }
 
-#scoreContainer img {
-  position: absolute;
-  top: 50px;
-  left: 160px;
-}
-
-#scoreContainer p {
-  position: absolute;
-  display: block;
-  width: 59px;
-  height: 59px;
-  top: 130px;
-  left: 160px;
-  font-size: 1.5em;
-  font-weight: bold;
+#container #scoreContainer p,
+.container__quiz #scoreContainer p {
+  padding: 0 25px;
   text-align: center;
+  font-size: 2rem;
+  line-height: 3rem;
+  max-width: 500px;
 }
 
-@media screen and (min-width: 1000px) {
-  #box__quiz {
-    margin: 20px auto;
-    background-color: white;
-    height: 300px;
-    width: 700px;
-    border-radius: 5px;
-    box-shadow: 0px 5px 15px 0px;
-    position: relative;
-  }
-  .start--item {
-    width: 100%;
-    margin: 0 auto;
-  }
-  #start {
-    font-size: 1.5em;
-    font-weight: bolder;
-    word-break: break-all;
-    width: 150px;
-    height: 150px;
-    border: 2px solid lightgrey;
-    text-align: center;
-    cursor: pointer;
-    margin: 0 auto;
-    position: relative;
-    color: lightgrey;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 65px;
-    left: 0;
-  }
-  #start:hover {
-    border: 3px solid pink;
-    color: pink;
-  }
-  #qImg {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-  }
-  #qImg img {
-    width: 200px;
-    height: 200px;
-    border-top-left-radius: 5px;
-  }
-  #question {
-    width: 500px;
-    height: 125px;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  #question p {
-    margin: 0;
-    padding: 15px;
-    font-size: 1.25em;
-  }
-  #choices {
-    width: 480px;
-    position: absolute;
-    right: 0;
-    top: 125px;
-    padding: 10px;
-    display: block;
-  }
-  .choice {
-    display: inline-block;
-    width: 135px;
-    text-align: center;
-    border: 1px solid grey;
-    border-radius: 5px;
-    cursor: pointer;
-    padding: 5px;
-    margin-left: 5px;
-  }
-  .choice:hover {
-    border: 2px solid grey;
-    font-weight: bold;
-  }
-  #timer {
-    position: absolute;
-    height: 100px;
-    width: 200px;
-    bottom: 0px;
-    text-align: center;
-  }
-  #counter {
-    font-size: 3em;
-  }
-  #btimeGauge {
-    width: 150px;
-    height: 10px;
-    border-radius: 10px;
-    background-color: lightgray;
-    margin-left: 25px;
-  }
-  #timeGauge {
-    height: 10px;
-    border-radius: 10px;
-    background-color: pink;
-    margin-top: -10px;
-    margin-left: 25px;
-  }
-  #progress {
-    width: 500px;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    padding: 5px;
-    text-align: right;
-  }
-  .prog {
-    width: 25px;
-    height: 25px;
-    border: 1px solid #000;
-    display: inline-block;
-    border-radius: 50%;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  #scoreContainer {
-    margin: 20px auto;
-    background-color: white;
-    opacity: 0.8;
-    height: 300px;
-    width: 700px;
-    border-radius: 5px;
-    box-shadow: 0px 5px 15px 0px;
-    position: relative;
-    display: none;
-  }
-  #scoreContainer img {
-    position: absolute;
-    top: 100px;
-    left: 325px;
-  }
-  #scoreContainer p {
-    position: absolute;
-    display: block;
-    width: 59px;
-    height: 59px;
-    top: 175px;
-    left: 325px;
-    font-size: 1.5em;
-    font-weight: bold;
-    text-align: center;
-  }
+#container #scoreContainer img,
+.container__quiz #scoreContainer img {
+  margin: 0 auto;
+  display: flex;
+  padding: 25px 0;
+}
+
+#container #question p,
+.container__quiz #question p {
+  text-align: center;
 }
 
 .cookie-container {
