--- a/assets/style/components/_app.scss
+++ b/assets/style/components/_app.scss
@@ -62,9 +62,13 @@
     font-size: 20px;
     font-weight: 600;
     margin: 15px 0;
+    background-color: transparent;
+    transition: background-color 0.5s ease, color 0.7s ease-in;
     &:hover {
       border: 2px solid grey;
       font-weight: bold;
+      background-color: $color-tetiary;
+      color: $color__basic;
     }
   }
   #timer {
