--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -288,7 +288,9 @@ p,
 b,
 u,
 th,
-td {
+td,
+ul,
+li {
   font-family: "Catamaran", fallback, sans-serif;
   color: #554149;
 }
@@ -1197,6 +1199,10 @@ form .form__button:hover {
 
 .noun-gender li {
   line-height: normal;
+}
+
+.nominative {
+  list-style-type: disc;
 }
 
 /* catamaran-regular - latin */
