--- a/assets/style/base/_base.scss
+++ b/assets/style/base/_base.scss
@@ -251,3 +251,10 @@ html:lang(zh) {
     font-family: $ff-chinese;
   }
 }
+
+//Vi
+html:lang(vi) {
+  * {
+    font-family: $ff-vi !important;
+  }
+}
