--- a/assets/style/components/_panels.scss
+++ b/assets/style/components/_panels.scss
@@ -32,6 +32,12 @@
   .lesson--testUnit0 {
     background-image: url(./../../img/embl/testUnit0.jpg);
   }
+  .lesson--nominative {
+    background-image: url(./../../img/embl/nominative.jpg);
+  }
+  .lesson--numerals {
+    background-image: url(./../../img/embl/numerals.jpg);
+  }
 }
 
 //dialgues
