--- a/assets/style/base/_fonts.scss
+++ b/assets/style/base/_fonts.scss
@@ -4,8 +4,7 @@ $font-family__secondary: "Cormorant garamond", fallback, sans-serif; //used to e
 $font-family__tertiary: "Cormorant", fallback, sans-serif;
 $ff-polish: "Catamaran--Polish", fallback, sans-serif;
 $ff-chinese: "Noto Sans SC", fallback, sans-serif;
-
-//japanese
+$ff-vi: "Josefin Sans";
 $jp__family: "Noto Sans JP", fallback, sans-serif; //used in Japanese part website
 
 //size
@@ -259,4 +258,70 @@ $font-size__medium: 28px; //used to lessons.
     url("../fonts/poiret-one-v9-latin-ext-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("../fonts/poiret-one-v9-latin-ext-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* josefin-sans-regular - vietnamese_latin-ext */
+@font-face {
+  font-family: "Josefin Sans";
+  display: swap;
+  font-style: normal;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/josefin-sans-v16-vietnamese_latin-ext-regular.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/josefin-sans-v16-vietnamese_latin-ext-regular.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* josefin-sans-500 - vietnamese_latin-ext */
+@font-face {
+  font-family: "Josefin Sans";
+  display: swap;
+  font-style: normal;
+  font-weight: 500;
+  src: local(""),
+    url("../fonts/josefin-sans-v16-vietnamese_latin-ext-500.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/josefin-sans-v16-vietnamese_latin-ext-500.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* josefin-sans-600 - vietnamese_latin-ext */
+@font-face {
+  font-family: "Josefin Sans";
+  display: swap;
+  font-style: normal;
+  font-weight: 600;
+  src: local(""),
+    url("../fonts/josefin-sans-v16-vietnamese_latin-ext-600.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/josefin-sans-v16-vietnamese_latin-ext-600.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* josefin-sans-700 - vietnamese_latin-ext */
+@font-face {
+  font-family: "Josefin Sans";
+  display: swap;
+  font-style: normal;
+  font-weight: 700;
+  src: local(""),
+    url("../fonts/josefin-sans-v16-vietnamese_latin-ext-700.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/josefin-sans-v16-vietnamese_latin-ext-700.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* josefin-sans-italic - vietnamese_latin-ext */
+@font-face {
+  font-family: "Josefin Sans";
+  display: swap;
+  font-style: italic;
+  font-weight: 400;
+  src: local(""),
+    url("../fonts/josefin-sans-v16-vietnamese_latin-ext-italic.woff2")
+      format("woff2"),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+      url("../fonts/josefin-sans-v16-vietnamese_latin-ext-italic.woff")
+      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
