--- a/assets/style/components/_cards.scss
+++ b/assets/style/components/_cards.scss
@@ -207,6 +207,9 @@
   align-items: flex-end;
   height: 50px;
   margin-top: 35px;
+  button {
+    display: none;
+  }
 }
 .container-card__item {
   height: calc(350px - 50px);
