--- a/assets/style/components/_cards.scss
+++ b/assets/style/components/_cards.scss
@@ -21,7 +21,8 @@
     padding: 0 16px;
   }
 
-  .card img {
+  .card img,
+  .modal-container img {
     display: block;
     width: 80%;
     margin: 0 auto;
@@ -200,20 +201,4 @@
 
 #root {
   margin-bottom: 25px;
-}
-
-.container-card__item--button {
-  display: flex;
-  align-items: flex-end;
-  height: 50px;
-  margin-top: 35px;
-}
-.container-card__item {
-  height: calc(350px - 50px);
-}
-
-#root:lang(zh) {
-  .container-card__item {
-    height: 230px;
-  }
 }
