--- a/assets/style/components/_main.scss
+++ b/assets/style/components/_main.scss
@@ -194,7 +194,7 @@ html:lang(ja) {
   align-items: center;
   margin: 0 auto;
   position: relative;
-  top: 0;
+  top: 12%;
   padding: 25px;
   transform: translate(0, -12%);
 }
