--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -1337,6 +1337,10 @@ form .form__button:hover {
   line-height: 50px;
 }
 
+.button-container {
+  flex: 0;
+}
+
 .prep {
   list-style: none;
   font-family: "Catamaran";
@@ -1911,9 +1915,9 @@ html:lang(ja) .box-news__item:last-child {
   align-items: center;
   margin: 0 auto;
   position: relative;
-  top: 12%;
+  top: 0;
+  transform: translate(0, -14%);
   padding: 25px;
-  transform: translate(0, -12%);
 }
 
 .modal-container img {
@@ -1927,6 +1931,8 @@ html:lang(ja) .box-news__item:last-child {
 @media screen and (min-width: 768px) {
   .modal-container {
     max-width: 650px;
+    top: 10%;
+    transform: translate(0, -10%);
   }
 }
 
