fixed Chinese translation

--- a/assets/style/components/_panels.scss
+++ b/assets/style/components/_panels.scss
@@ -38,6 +38,9 @@
   .lesson--numerals {
     background-image: url(./../../img/embl/numerals.jpg);
   }
+  .lesson--askingQuestions {
+    background-image: url(./../../img/embl/questions.jpg);
+  }
 }
 
 //dialgues
