--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -2838,7 +2838,7 @@ html:lang(ja) .nav {
 .index-banner {
   width: 100%;
   height: calc(100vh - 100px);
-  background-image: url(./../../img/bg/header-banner.jpg);
+  background-image: url(./../../img/bg/christmas-hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
