--- a/assets/style/components/_hero.scss
+++ b/assets/style/components/_hero.scss
@@ -1,5 +1,5 @@
-@import './../base/colors';
-@import './../base/fonts';
+@import "./../base/colors";
+@import "./../base/fonts";
 
 .vertical-center {
   display: table-cell;
@@ -7,22 +7,22 @@
 }
 
 .index-banner {
-    width: 100%;
-    height: calc(100vh - 100px);
-    background-image: url(./../../img/bg/header-banner.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: table;
-  }
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: url(./../../img/bg/christmas-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: table;
+}
 
-  @media only screen and (min-width: 1000px){
-    .index-banner {
-        height: 460px;
-      h1{
-        display: block;
-        width: 560px;
-        margin: 0 auto;  
-      }
+@media only screen and (min-width: 1000px) {
+  .index-banner {
+    height: 460px;
+    h1 {
+      display: block;
+      width: 560px;
+      margin: 0 auto;
+    }
   }
 }
