--- a/assets/style/components/_panels.scss
+++ b/assets/style/components/_panels.scss
@@ -41,6 +41,12 @@
   .lesson--askingQuestions {
     background-image: url(./../../img/embl/questions.jpg);
   }
+  .lesson--personalPronouns1 {
+    background-image: url(./../../img/embl/zaimki-1.jpg);
+  }
+  .lesson--personalPronouns2 {
+    background-image: url(./../../img/embl/zaimki-2.jpg);
+  }
 }
 
 //dialgues
