--- a/assets/style/base/_list-styles.scss
+++ b/assets/style/base/_list-styles.scss
@@ -1,21 +1,21 @@
 .prep {
-    list-style: none;
-    font-family: "Catamaran";
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 24px;
-    color: darkgrey;
-    margin: 0 auto;
-  }
-  .recipe {
-    list-style: decimal;
-    font-family: "Catamaran";
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    color: #111;
-    margin: 0 20px;
-  }
+  list-style: none;
+  font-family: "Catamaran";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+  color: darkgrey;
+  margin: 0 auto;
+}
+.recipe {
+  list-style: decimal;
+  font-family: "Catamaran";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  color: #111;
+  margin: 0 20px;
+}
 
 .noun-gender {
   list-style: decimal;
@@ -27,12 +27,18 @@
   }
 }
 
-.nominative{
+.nominative {
   list-style-type: disc;
 }
 
 //  traditions
 
-.xmas{
-  list-style-type:circle;
+.xmas {
+  list-style-type: circle;
+}
+
+//lessons list-style
+
+ul.lessons-list {
+  list-style: inside !important;
 }
